🐛 fix: 회원가입시 학생 / 교수 별로 라우터 분기 처리
